--- a/unidad_2.html
+++ b/unidad_2.html
@@ -22,7 +22,7 @@
                 <nav>
                     <ul>
                         <li class="menu-selected"><a href="#" class="text-menu-selected">Inicio</a></li>
-                        <li><a href=blog.html>Atras</a></li>
+                        <li><a href=index.html>Atras</a></li>
                     </ul>
                 </nav>
             </div>
