--- a/unidad_1.html
+++ b/unidad_1.html
@@ -38,6 +38,8 @@
     <!-- Contenido -->  
     <div class="container-content">
         <article>
+			<h2>Exposicion de la unidad.</h2>
+            <a href="https://youtu.be/FV3cz-UCTSg"></a>
             <h2>Temario.</h2>
             <p>
                 1.1 Modelos de arquitecturas de cómputo.<br>
