--- a/unidad_2.html
+++ b/unidad_2.html
@@ -38,6 +38,10 @@
     <!-- Contenido -->  
     <div class="container-content">
         <article>
+            <h2>Procesadores Intel</h2>
+            <a href="https://drive.google.com/file/d/1iN0NbkkCDipthHOiPUoZYr2AlIJ9Cr3t/view"></a> <br>
+            <h2>Procesadores AMD</h2>
+            <a href="https://drive.google.com/file/d/1hsuURHJsSfzZiB9VpjmTYvCVXPHcB4TD/view"></a> <br>
             <h2>Temario.</h2>
             <p>
                 2.1 Organización del procesador.<br>
