--- a/unidad_1.html
+++ b/unidad_1.html
@@ -37,8 +37,12 @@
 
     <!-- Contenido -->  
     <div class="container-content">
-	    <a href="https://youtu.be/FV3cz-UCTSg"> Exposicion de la unidad.</a>
-        <article>        
+	    
+        <article>   
+            <h2>Exposicion de la unidad.</h2>  
+            <p>https://youtu.be/FV3cz-UCTSg</p> <br> <br>
+            <p> <a href="https://youtu.be/FV3cz-UCTSg"> </a> </p> 
+            <a href="https://youtu.be/FV3cz-UCTSg"> </a>    
             <h2>Temario.</h2>
             <p>
                 1.1 Modelos de arquitecturas de cómputo.<br>
