--- a/unidad_3.html
+++ b/unidad_3.html
@@ -38,6 +38,10 @@
     <!-- Contenido -->  
     <div class="container-content">
         <article>
+            <h2>Memorias Ram</h2>
+            <p>https://bit.ly/3vtK2AP</p> <br> <br>
+            <h2>Tipos de Computadoras</h2>
+            <p>https://bit.ly/3zujEdr</p> <br> <br>
             <h2>Temario.</h2>
             <p>
                 3.1 Chip Set. <br>
